# SnakeLearning

./: .gitignore  .gitmodules  CMakeLists.txt  NanoGUIUtils.cmake  README.md  SupervisedBot_3x3_0.txt  tfNetwork.json
aux_files/: SupervisedBot_3x3_0.txt  play_log.teo
aux_files/genetic/: TrainedGenetic.json
aux_files/genetic/saves/: TrainedGenetic10x10map.json  TrainedGenetic1food.json  TrainedGenetic25x25grid.json
aux_files/json_test/: Game.json  GameOptions.json  QTabStudent.json
aux_files/playLogs/: play_log0.teo  play_log1.teo  play_log10.teo  play_log11.teo  play_log12.teo  play_log13.teo  play_log14.teo  play_log15.teo  play_log2.teo  play_log3.teo  play_log4.teo  play_log5.teo  play_log6.teo  play_log7.teo  play_log8.teo  play_log9.teo
aux_files/playLogs/logs_000/: play_log0.teo  play_log1.teo  play_log2.teo  play_log3.teo  play_log4.teo  play_log5.teo  play_log6.teo  play_log7.teo
aux_files/qneural/: NeuralQAgent.json  network.json  tfNetworkX2-5x5.json
aux_files/qtabular/: TrainedGrid3x5.json  TrainedGrid3x7.json  TrainedGrid5x7.json
cmake/: FindEigen3.cmake  FindTensorflow.cmake
includes/AI/: ITrainer.hpp
includes/AI/GeneticAlgorithm/: GeneticBot.h  GeneticJsonUtils.h  GeneticNetwork.h  GeneticOptions.h  GeneticTrainer.h  GeneticTrainerMultiSnake.h
includes/AI/HardCoded/: Bot.hpp  SingleBot.hpp
includes/AI/QLearning/: ActionPickingUtils.h  MultiSnakeTabularTrainer.hpp  MultisnakeTabularTrainer.hpp  QOptions.h  QTabStudent.hpp  QTable.h  QTabularBrains.hpp  State.h  TabularActionPicker.hpp  TabularAgent.hpp  TabularQJsonUtils.h  TabularTrainer.hpp  TrainedTabularAgent.hpp
includes/AI/Supervised/: SupervisedBot.h  SupervisedManager.h  SupervisedNetwork.h  SupervisedTrainer.h
includes/AppUI/: Application.h  ApplicationModel.h  FoodGraphicCell.h  GameScene.h  GameSettings.h  GraphicBoard.h  GraphicCell.h  HumanPlayerQt.h  IScene.h  OptionsScene.h  SceneManager.h  SnakeGraphicCell.h  SnakeHeadGraphicCell.h  StartMenuScene.h  TrainScene.h  WallGraphicCell.h
includes/ConfigLoading/: GameJson.h  GameOptionsJson.h  GeneticBotJson.h  ICellInterpreterJson.h  IObserverJson.h  IPlayerJson.h  OpenGLRendererModelJson.h  QTabStudentJson.h  SupervisedNNJson.h
includes/GameLogic/: Coordinate.h  FileHelper.h  Game.h  GameBoard.h  GameOptions.h  GameState.h  GameUtils.h  HumanPlayer.h  IPlayer.h  MultiPlatformTerm.hpp  Snake.h  TermRenderer.hpp
includes/GameLogic/CellInterpreter/: Basic3CellInterpreter.hpp  ICellInterpreter.hpp  WallFoodBody.hpp  WallFoodEnemy.hpp
includes/GameView/: Board.h  Cell.h  Controller.h  EventHandler.h  GameWindow.h  GraphPlotter.h  HumanPlayer2.h  IGameRenderer.hpp  OpenGLRenderer.h  TermRenderer.hpp  utils.h
includes/GymEnv/: IActionPicker.hpp  MultiSnakeEnv.hpp  SingleSnakeEnvBase.hpp  SingleSnakeGridView.hpp  SingleSnakeRelativeView.hpp  SnakeAgent.hpp  SnakeEnvBase.hpp  SnakeStudent.hpp  StateExtractor.hpp  StepResult.h
includes/GymEnv/StateObserver/: FullMapObserver.hpp  (+5 more)
includes/MultiplatformUtils/: Getch.h
includes/TensorflowSandbox/: NeuralQAgent.hpp  NeuralQTrainer.hpp  TfQStudent.hpp  TrainMemory.h  TrainSession.h
includes/TrainingGrounds/: TrainingGrounds.h
includes/Utils/: JsonConfigLoader.hpp  MathUtils.h  MatrixUtils.h  NeuralNetwork.h  PrintUtils.h
src/: CMakeLists.txt  CmakeUtils.cmake  OpenGlLoader.cmake
src/AI/: CMakeLists.txt
src/AI/GeneticAlgorithm/: CMakeLists.txt  GeneticBot.cpp  GeneticJsonUtils.cpp  GeneticNetwork.cpp  GeneticTrainer.cpp  GeneticTrainerMultiSnake.cpp
src/AI/HardCoded/: Bot.cpp  CMakeLists.txt  SingleBot.cpp
src/AI/QLearning/: ActionPickingUtils.cpp  CMakeLists.txt  MultiSnakeTabularTrainer.cpp  MultisnakeTabularTrainer.cpp  QOptions.cpp  QTabStudent.cpp  QTabularBrains.cpp  TabularActionPicker.cpp  TabularAgent.cpp  TabularQJsonUtils.cpp  TabularTrainer.cpp  TrainedTabularAgent.cpp
src/AI/Supervised/: CMakeLists.txt  SupervisedBot.cpp  SupervisedManager.cpp  SupervisedNetwork.cpp  SupervisedTrainer.cpp  main.cpp
src/AppUI/: Application.cpp  ApplicationModel.cpp  CMakeLists.txt  FoodGraphicCell.cpp  GameScene.cpp  GraphicBoard.cpp  GraphicCell.cpp  HumanPlayerQt.cpp  IScene.cpp  OptionsScene.cpp  SceneManager.cpp  SnakeGraphicCell.cpp  SnakeHeadGraphicCell.cpp  StartMenuScene.cpp  TrainScene.cpp  WallGraphicCell.cpp
src/ConfigLoading/: CMakeLists.txt  ConfigLoaderSandbox.cpp  GameJson.cpp  GameOptionsJson.cpp  GeneticBotJson.cpp  ICellInterpreterJson.cpp  IObserverJson.cpp  IPlayerJson.cpp  OpenGLRendererModelJson.cpp  QTabStudentJson.cpp  SupervisedNNjson.cpp  _cmake_warning_ignore.cpp
src/GUIPresentation/: CMakeLists.txt  main.cpp  test.cpp
src/GameLogic/: CMakeLists.txt  Coordinate.cpp  FileHelper.cpp  Game.cpp  GameBoard.cpp  GameOptions.cpp  GameState.cpp  GameUtils.cpp  HumanPlayer.cpp  IPlayer.cpp  MultiPlatformColoredText.cpp  Snake.cpp  TermRenderer.cpp
src/GameLogic/CellInterpreter/: Basic3CellInterpreter.cpp  WallFoodBody.cpp  WallFoodEnemy.cpp
src/GameSandBox/: CMakeLists.txt  main.cpp
src/GameView/: Board.cpp  CMakeLists.txt  Cell.cpp  Controller.cpp  EventHandler.cpp  GameWindow.cpp  GraphPlotter.cpp  HumanPlayer2.cpp  OpenGLRenderer.cpp  TermRenderer.cpp  main.cpp
src/GymEnv/: CMakeLists.txt  MultiSnakeEnv.cpp  SingleSnakeEnvBase.cpp  SingleSnakeGridView.cpp  SingleSnakeRelativeView.cpp  SnakeAgent.cpp  SnakeEnvBase.cpp  SnakeStudent.cpp  StateExtractor.cpp
src/GymEnv/StateObserver/: FoodDirectionDecorator.cpp  FullMapObserver.cpp  GridObserver.cpp  IStateObserver.cpp  ObservationDecorator.cpp  ThreeDirectionalObserver.cpp
src/MultiplatformUtils/: CMakeLists.txt  Getch.cpp
src/OpenGlSandbox/: CMakeLists.txt  main.cpp
src/TensorflowSandbox/: CMakeLists.txt  NeuralQAgent.cpp  NeuralQTrainer.cpp  TfQStudent.cpp  TrainMemory.cpp  main.cpp
src/TrainingGrounds/: CMakeLists.txt  GeneticSnakeMain.cpp  MultisnakeMain.cpp  MultisnakeTf.cpp  main.cpp
src/Utils/: CMakeLists.txt  JsonConfigLoader.cpp  MathUtils.cpp  MatrixUtils.cpp  NeuralNetwork.cpp  PrintUtils.cpp
ui/: GameScene.ui  OptionsScene.ui  StartMenuScene.ui  TrainScene.ui
